# gpui-form

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  README.md  justfile
.agents/skills/use-gpui-form/: SKILL.md
.github/workflows/: ci.yml
crates/gpui-form/: Cargo.toml  README.md
crates/gpui-form-codegen/: Cargo.toml  README.md
crates/gpui-form-codegen/docs/: ARCHITECTURE.md
crates/gpui-form-codegen/src/: components.rs  lib.rs
crates/gpui-form-codegen/src/implementations/: custom.rs  date_picker.rs  file_picker.rs  infinite_select.rs  input.rs  mod.rs  number_input.rs  phone_input.rs  select.rs
crates/gpui-form-component/: Cargo.toml  README.md  i18n.toml
crates/gpui-form-component-derive/: Cargo.toml  README.md
crates/gpui-form-component-story/: Cargo.toml  README.md  i18n.toml
crates/gpui-form-component-story/i18n/en/gpui-form-component-story/: date_picker.ftl  file_picker.ftl  infinite_select.ftl
crates/gpui-form-component-story/i18n/fr-FR/gpui-form-component-story/: date_picker.ftl  file_picker.ftl  infinite_select.ftl
crates/gpui-form-component-story/i18n/zh-CN/gpui-form-component-story/: date_picker.ftl  file_picker.ftl  infinite_select.ftl
crates/gpui-form-component-story/src/: i18n.rs  lib.rs  main.rs
crates/gpui-form-component-story/src/stories/: common.rs  date_picker.rs  file_picker.rs  infinite_select.rs  mod.rs
crates/gpui-form-component/docs/: ARCHITECTURE.md
crates/gpui-form-component/i18n/en/gpui-form-component/: date_picker.ftl  file_picker.ftl
crates/gpui-form-component/i18n/fr-FR/gpui-form-component/: date_picker.ftl  file_picker.ftl
crates/gpui-form-component/i18n/zh-CN/gpui-form-component/: date_picker.ftl  file_picker.ftl
crates/gpui-form-component/src/: calendar.rs  custom.rs  date_picker.rs  file_picker.rs  i18n.rs  infinite_select.rs  lib.rs  main.rs  stories.rs  tuple_select.rs
crates/gpui-form-component/src/stories/: date_picker.rs  file_picker.rs  infinite_select.rs  mod.rs
crates/gpui-form-component/tests/: infinite_select_runtime.rs
crates/gpui-form-core/: Cargo.toml  README.md
crates/gpui-form-core/docs/: ARCHITECTURE.md
crates/gpui-form-core/src/: components.rs  lib.rs  numeric.rs  path.rs  phone.rs  registry.rs  state.rs
crates/gpui-form-core/src/implementations/: checkbox.rs  custom.rs  date_picker.rs  infinite_select.rs  input.rs  mod.rs  number_input.rs  select.rs  switch.rs  tuple_select.rs
crates/gpui-form-derive/: Cargo.toml  README.md
crates/gpui-form-derive/docs/: ARCHITECTURE.md
crates/gpui-form-derive/src/: lib.rs
crates/gpui-form-derive/src/derives/: custom_component_state.rs  gpui_form.rs  infinite_select.rs  mod.rs  select_item.rs  tuple_enum_inner.rs
crates/gpui-form-derive/src/derives/gpui_form/: cfg_attr.rs  components.rs  expansion.rs  field_path.rs  koruma.rs  mod.rs  structs.rs  tests.rs  utils.rs  value_holder.rs
crates/gpui-form-derive/src/derives/snapshots/: gpui_form_derive__derives__gpui_form__tests__item_type_fields.snap  gpui_form_derive__derives__gpui_form__tests__select_and_custom_components.snap  gpui_form_derive__derives__gpui_form__tests__standard_components.snap  gpui_form_derive__derives__gpui_form__tests__standard_components_fluent.snap
crates/gpui-form-derive/tests/: field_path.rs  form_state_dirty_without_serde.rs  serde_round_trip.rs  ui.rs
crates/gpui-form-derive/tests/ui/: custom_component_both_shape_and_state.rs  custom_component_both_shape_and_state.stderr  custom_component_missing_shape_and_state.rs  custom_component_missing_shape_and_state.stderr  form_path_types_do_not_mix.rs  form_path_types_do_not_mix.stderr  koruma_builder_attrs_pass.rs
crates/gpui-form-internal-macros/: Cargo.toml  README.md
crates/gpui-form-internal-macros/docs/: ARCHITECTURE.md
crates/gpui-form-num-regex/: Cargo.toml
crates/gpui-form-prototyping-core/: Cargo.toml  README.md
crates/gpui-form-prototyping-core/docs/: ARCHITECTURE.md
crates/gpui-form-prototyping-core/src/: code_gen.rs  error.rs  imports.rs  lib.rs
crates/gpui-form-prototyping-core/src/implementations/: checkbox.rs  custom.rs  date_picker.rs  file_picker.rs  infinite_select.rs  input.rs  mod.rs  number_input.rs  phone_input.rs  select.rs  switch.rs  tuple_select.rs
crates/gpui-form-runtime/: Cargo.toml  README.md
crates/gpui-form-runtime/docs/: ARCHITECTURE.md
crates/gpui-form-runtime/src/: lib.rs
crates/gpui-form-schema/: Cargo.toml  README.md
crates/gpui-form-schema/docs/: ARCHITECTURE.md
crates/gpui-form-schema/src/: components.rs  layout.rs  lib.rs  registry.rs
crates/gpui-form-schema/src/implementations/__crate_paths/: gpui.rs  gpui_component.rs
crates/gpui-form/docs/: ARCHITECTURE.md
crates/gpui-form/src/: lib.rs
docs/: feature-backlog.md  form-state-persistence.md
examples/: README.md
examples/prototyping/: Cargo.toml
examples/prototyping/output/: cfg_attr_example.rs  empty.rs  external_shape_vec_string_input_list.rs  item.rs  location_form.rs  mod.rs  nutype_user.rs  user.rs  vec_string_input_list.rs
examples/prototyping/src/: main.rs
examples/some-lib/: .expanded.rs  Cargo.toml
examples/some-lib-custom-components/: Cargo.toml
examples/some-lib-custom-components/src/: lib.rs
examples/some-lib-forms/: Cargo.toml
examples/some-lib-forms/src/: i18n.rs  main.rs
examples/some-lib-forms/src/forms/: cfg_attr_example.rs  custom_vec_string.rs  custom_vec_string_external.rs  empty.rs  external_shape_vec_string_input_list.rs  feature_audit.rs  item.rs  location.rs  location_form.rs  location_ref.rs  mod.rs  nutype_user.rs  phone_verification.rs  user.rs  vec_string_input_list.rs
examples/some-lib/src/: lib.rs  validators.rs
examples/some-lib/src/structs/: cfg_attr_example.rs  custom_vec_string.rs  custom_vec_string_external.rs  empty.rs  form_action.rs  location.rs  mod.rs  new_type.rs  nutype_user.rs  user.rs
examples/some-lib/tests/: form_state_integration.rs  phone_input_component.rs  typed_paths.rs
repro/: Cargo.toml  i18n.toml
repro/i18n/en/: repro.ftl
repro/src/: main.rs
(+11 files in other folders)
