[workspace]
default-members = [ "examples/some-lib-forms" ]
members = [
  "crates/gpui-form",
  "crates/gpui-form-component",
  "crates/gpui-form-core",
  "crates/gpui-form-derive",
  "crates/gpui-form-internal-macros",
  "crates/gpui-form-prototyping-core",
  "examples/some-lib",
  "examples/some-lib-forms",
  "examples/prototyping",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
publish = true
readme = "README.md"
repository = "https://github.com/stayhydated/gpui-form"
rust-version = "1.88"
version = "0.5.1"

[workspace.dependencies]
anyhow = "1.0"
bon = "3.8"
chrono = "0.4"
crabtime = "1.1"
crate-paths = "0.2"
darling = "0.23"
derive_more = "2.1"
dotenv = "0.15"
es-fluent = "0.11"
es-fluent-lang = "0.11"
es-fluent-manager-embedded = "0.11"
fluent-bundle = "0.16"
futures = "0.3"
getset = "0.1"
gpui = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-form = { path = "crates/gpui-form", version = "0.5.1" }
gpui-form-component = { path = "crates/gpui-form-component", version = "0.5.1" }
gpui-form-core = { path = "crates/gpui-form-core", version = "0.5.1" }
gpui-form-derive = { path = "crates/gpui-form-derive", version = "0.5.1" }
gpui-form-internal-macros = { path = "crates/gpui-form-internal-macros", version = "0.5.1" }
gpui-form-internal-paths = { path = "crates/gpui-form-internal-paths", version = "0.5.0" }
gpui-form-prototyping-core = { path = "crates/gpui-form-prototyping-core", version = "0.5.1" }
gpui-storybook = { git = "https://github.com/stayhydated/gpui-storybook" }
heck = "0.5.0"
insta = { version = "1.46" }
inventory = "0.3"
itertools = "0.14"
koruma = { git = "https://github.com/stayhydated/koruma" }
koruma-collection = { git = "https://github.com/stayhydated/koruma" }
koruma-derive-core = { git = "https://github.com/stayhydated/koruma" }
log = "0.4"
nutype = "0.6"
once_cell = "1.21"
paste = "1.0"
prettyplease = "0.2"
proc-macro-error2 = "2.0"
proc-macro2 = "1.0"
quote = "1.0"
rayon = "1.11"
regex = "1.12"
rust-embed = "8.11"
rust_decimal = "1.40"
serde = "1.0"
serde_json = "1.0"
strum = "0.27"
syn = "2.0"
syn-cfg-attr = "0.1"
thiserror = "2.0"
tokio = "1.49"
tracing-subscriber = "0.3"
unic-langid = "0.9"
unicode-segmentation = "1.12"
unwrapped = "0.3"
unwrapped-core = "0.3"

[workspace.lints.rust]
unexpected_cfgs = { level = "deny" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
type_complexity = "allow"
uninlined_format_args = "allow"
unused_trait_names = "warn"

[profile.dev]
codegen-units = 16
debug = "limited"
opt-level = 1
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
