[workspace]
default-members = [ "examples/some-lib-forms" ]
members = [
  "crates/gpui-form",
  "crates/gpui-form-core",
  "crates/gpui-form-codegen",
  "crates/gpui-form-component",
  "crates/gpui-form-schema",
  "crates/gpui-form-runtime",
  "crates/gpui-form-derive",
  "crates/gpui-form-prototyping-core",
  "examples/some-lib",
  "examples/some-lib-custom-components",
  "examples/some-lib-forms",
  "examples/prototyping",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
publish = true
readme = "README.md"
repository = "https://github.com/stayhydated/gpui-form"
rust-version = "1.88"
version = "0.5.1"

[workspace.dependencies]
anyhow = "1.0"
bon = "3.9"
chrono = "0.4"
crabtime = "1.1"
crate-paths = "0.2"
darling = "0.23"
derive_more = "2.1"
es-fluent = "0.14"
es-fluent-lang = "0.14"
es-fluent-manager-embedded = "0.14"
gpui = { git = "https://github.com/zed-industries/zed", rev = "15d8660748b508b3525d3403e5d172f1a557bfa5" }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-form = { path = "crates/gpui-form", version = "0.5.1" }
gpui-form-codegen = { path = "crates/gpui-form-codegen", version = "0.5.1" }
gpui-form-component = { path = "crates/gpui-form-component", version = "0.5.1" }
gpui-form-core = { path = "crates/gpui-form-core", version = "0.5.1" }
gpui-form-derive = { path = "crates/gpui-form-derive", version = "0.5.1" }
gpui-form-prototyping-core = { path = "crates/gpui-form-prototyping-core", version = "0.5.1" }
gpui-form-runtime = { path = "crates/gpui-form-runtime", version = "0.5.1" }
gpui-form-schema = { path = "crates/gpui-form-schema", version = "0.5.1" }
gpui-storybook = { git = "https://github.com/stayhydated/gpui-storybook" }
gpui_platform = { features = [
  "font-kit",
  "x11",
  "wayland",
  "runtime_shaders",
], git = "https://github.com/zed-industries/zed", rev = "15d8660748b508b3525d3403e5d172f1a557bfa5" }
heck = "0.5.0"
icu_calendar = "2.2.0"
icu_datetime = "2.2.0"
icu_locale_core = "2.2.0"
insta = "1.46"
inventory = "0.3"
itertools = "0.14"
jiff = "0.2.23"
koruma = "0.7.1"
koruma-collection = "0.7.1"
koruma-derive-core = "0.7.1"
log = "0.4"
prettyplease = "0.2"
proc-macro-error2 = "2.0"
proc-macro2 = "1.0"
quote = "1.0"
rust_decimal = "1.40"
serde = "1.0"
serde_json = "1.0"
strum = "0.28"
syn = "2.0"
syn-cfg-attr = "0.1"
thiserror = "2.0"
tokio = "1.49"
tracing-subscriber = "0.3"
unic-langid = "0.9"
unicode-segmentation = "1.12"

[replace]
"https://github.com/zed-industries/zed#gpui@0.2.2" = { git = "https://github.com/zed-industries/zed", rev = "15d8660748b508b3525d3403e5d172f1a557bfa5" }

[workspace.lints.rust]
unexpected_cfgs = { level = "deny" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
type_complexity = "allow"
uninlined_format_args = "allow"
unused_trait_names = "warn"

[profile.dev]
codegen-units = 16
debug = "limited"
opt-level = 1
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
