[workspace]
default-members = [ "examples/some-lib-forms" ]
members = [
  "crates/gpui-form",
  "crates/gpui-form-core",
  "crates/gpui-form-codegen",
  "crates/gpui-form-component",
  "crates/gpui-form-component-derive",
  "crates/gpui-form-component-story",
  "crates/gpui-form-schema",
  "crates/gpui-form-derive",
  "crates/gpui-form-prototyping-core",
  "vendor/gpui-storybook/crates/gpui-storybook",
  "vendor/gpui-storybook/crates/gpui-storybook-core",
  "vendor/gpui-storybook/crates/gpui-storybook-components",
  "vendor/gpui-storybook/crates/gpui-storybook-macros",
  "vendor/gpui-storybook/crates/gpui-storybook-toml",
  "vendor/gpui-es-fluent/crates/gpui-es-fluent",
  "examples/some-lib",
  "examples/some-lib-forms",
  "examples/prototyping",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
publish = true
readme = "README.md"
repository = "https://github.com/stayhydated/gpui-form"
rust-version = "1.95"
version = "0.5.1"

[workspace.dependencies]
anyhow = "1.0"
bon = "3.9"
chrono = "0.4"
crabtime = "1.1"
darling = "0.23"
derive_more = "2.1"
es-fluent = "0.16"
es-fluent-build = "0.16"
es-fluent-lang = "0.16"
es-fluent-manager-embedded = "0.16"
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "e416af7f4dad861f251d357b6aa677dbc13a500e" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", rev = "e416af7f4dad861f251d357b6aa677dbc13a500e" }
gpui-es-fluent = { path = "vendor/gpui-es-fluent/crates/gpui-es-fluent" }
gpui-form = { path = "crates/gpui-form", version = "0.5.1" }
gpui-form-codegen = { path = "crates/gpui-form-codegen", version = "0.5.1" }
gpui-form-component = { path = "crates/gpui-form-component", version = "0.5.1" }
gpui-form-component-derive = { path = "crates/gpui-form-component-derive", version = "0.5.1" }
gpui-form-component-story = { path = "crates/gpui-form-component-story", version = "0.5.1" }
gpui-form-core = { path = "crates/gpui-form-core", version = "0.5.1" }
gpui-form-derive = { path = "crates/gpui-form-derive", version = "0.5.1" }
gpui-form-prototyping-core = { path = "crates/gpui-form-prototyping-core", version = "0.5.1" }
gpui-form-schema = { path = "crates/gpui-form-schema", version = "0.5.1" }
gpui-storybook = { path = "vendor/gpui-storybook/crates/gpui-storybook" }
gpui-storybook-components = { path = "vendor/gpui-storybook/crates/gpui-storybook-components" }
gpui-storybook-core = { path = "vendor/gpui-storybook/crates/gpui-storybook-core" }
gpui-storybook-macros = { path = "vendor/gpui-storybook/crates/gpui-storybook-macros" }
gpui-storybook-toml = { path = "vendor/gpui-storybook/crates/gpui-storybook-toml" }
gpui_platform = { features = [
  "font-kit",
  "x11",
  "wayland",
  "runtime_shaders",
], git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
heck = "0.5.0"
phonenumber = "0.3.9"
icu_calendar = "2.2.0"
icu_datetime = "2.2.0"
icu_locale_core = "2.2.0"
insta = "1.46"
inventory = "0.3"
itertools = "0.14"
jiff = "0.2.23"
koruma = "0.9"
koruma-collection = "0.9"
koruma-derive-core = "0.9"
log = "0.4"
prettyplease = "0.2"
proc-macro-crate = "3.2"
proc-macro-error2 = "2.0"
proc-macro2 = "1.0"
quote = "1.0"
reqwest_client = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
rust-embed = "8.11"
rust_decimal = "1.40"
serde = "1.0"
serde_json = "1.0"
strum = "0.28"
syn = "2.0"
syn-cfg-attr = "0.1"
thiserror = "2.0"
tokio = "1.49"
toml = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
unic-langid = "0.9"
unicode-segmentation = "1.12"

[workspace.lints.rust]
unexpected_cfgs = { level = "deny" }

[workspace.lints.clippy]
dbg_macro = "deny"
derive_partial_eq_without_eq = "warn"
err_expect = "warn"
incompatible_msrv = "deny"
iter_on_single_items = "warn"
needless_bool = "warn"
redundant_clone = "warn"
todo = "deny"
type_complexity = "allow"
uninlined_format_args = "allow"
unused_trait_names = "warn"
useless_conversion = "warn"

[profile.dev]
codegen-units = 16
debug = "limited"
opt-level = 1
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
