[package]
name = "repro"
version = "0.1.0"
edition.workspace = true
license = "Unlicense"
publish = false

[dependencies]
es-fluent = { features = [ "derive" ], workspace = true }
es-fluent-lang = { workspace = true }
es-fluent-manager-embedded = { workspace = true }
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui-form = { features = [ "derive", "component" ], workspace = true }
gpui-storybook = { features = [ "macros" ], workspace = true }
koruma = { features = [ "fluent" ], workspace = true }
koruma-collection = { workspace = true }
inventory = { workspace = true }
rust-embed = { workspace = true }
strum = { workspace = true }
unic-langid = { workspace = true }

[lints]
workspace = true
