[package]
name = "gpui-form-codegen"
description = """
Code generation support for gpui-form derive macros.
"""
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
darling = { workspace = true }
derive_more = { features = [ "full" ], workspace = true }
gpui-form-schema = { workspace = true }
heck = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
strum = { features = [ "derive" ], workspace = true }
syn = { features = [ "full" ], workspace = true }

[lints]
workspace = true
