[package]
name = "gpui-form-component"
description = """
Custom components for gpui-form, including InfiniteSelect for nested enum support
"""
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
chrono = { workspace = true }
gpui = { workspace = true }
gpui-component = { workspace = true }
icu_calendar = { workspace = true }
icu_datetime = { workspace = true }
icu_locale_core = { workspace = true }
jiff = { workspace = true }

[lints]
workspace = true
