[package]
name = "gpui-form-core"
description = """
Core helpers for gpui-form.
"""
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"

[lints]
workspace = true

[features]
default = []
phone = [ "dep:phonenumber" ]

[dependencies]
phonenumber = { optional = true, workspace = true }
