[package]
name = "gpui-form-derive"
description = """
Macro crate for gpui-form
"""
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
darling = { workspace = true }
es-fluent = { workspace = true }
gpui-form-codegen = { workspace = true }
itertools = { workspace = true }
koruma-derive-core = { workspace = true }
proc-macro-error2 = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { features = [ "full" ], workspace = true }
syn-cfg-attr = { workspace = true }

[lints]
workspace = true

[features]
default = [  ]
inventory = [  ]

[dev-dependencies]
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui-form = { default-features = false, path = "../gpui-form" }
insta = { workspace = true }
koruma = { workspace = true }
koruma-collection = { workspace = true }
prettyplease = { workspace = true }
trybuild = "1.0"
