[package]
name = "gpui-form-internal-macros"
description = """
Internal macros for gpui-form-core
"""
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { features = [ "full" ], workspace = true }

[lints]
workspace = true
