[package]
name = "gpui-form-internal-macros"
description = """
Internal macros for gpui-form-core
"""
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = { features = [ "full" ], workspace = true }

[lints]
workspace = true
