[package]
name = "gpui-form-num-regex"
description = """
Naive implementation of regex-based number validation for gpui-form-core
"""
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
regex = { workspace = true }
rust_decimal = { optional = true, workspace = true }

[lints]
workspace = true

[features]
default = [  ]
rust_decimal = [ "dep:rust_decimal" ]
