[package]
name = "gpui-form-prototyping-core"
description = """
Consumer-facing prototyping utilities for gpui-form.
"""
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
gpui-form-core = { workspace = true }
heck = { workspace = true }
inventory = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { features = [ "full", "parsing" ], workspace = true }

[lints]
workspace = true

[features]
chrono = [  ]
default = [ "chrono" ]
jiff = [  ]
