[package]
name = "gpui-form-prototyping-core"
description = """
Consumer-facing prototyping utilities for gpui-form.
"""
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
gpui-form-core = { workspace = true }
heck = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { features = [ "full", "parsing" ], workspace = true }

[features]
default = [  ]
fluent = [  ]

[lints]
workspace = true
