[package]
name = "gpui-form-runtime"
description = """
Runtime traits and helpers for gpui-form.
"""
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
gpui-form-component = { workspace = true }

[lints]
workspace = true
