[package]
name = "gpui-form-schema"
description = """
Schema crate for gpui-form
"""
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
heck = { workspace = true }
inventory = { workspace = true }
strum = { features = [ "derive" ], workspace = true }

[lints]
workspace = true
