[package]
name = "gpui-form"
description = """
The gpui-form crate
"""
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"
keywords = [ "gpui", "gpui-component", "form" ]

[features]
default = [ "derive" ]
derive = [ "dep:gpui-form-derive" ]
inventory = [ "gpui-form-derive?/inventory" ]

[dependencies]
bon = { workspace = true }
gpui-form-component = { workspace = true }
gpui-form-core = { workspace = true }
gpui-form-derive = { optional = true, workspace = true }

[lints]
workspace = true
