[package]
name = "some-lib-custom-components"
version = "0.1.0"
edition.workspace = true
license = "Unlicense"
publish = false

[dependencies]
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui-form = { workspace = true }

[package.metadata.cargo-machete]
ignored = [ "gpui", "gpui-component" ]
