[package]
name = "some-lib-forms"
version = "0.1.0"
edition.workspace = true
license = "Unlicense"
publish = false


[dependencies]
anyhow = { workspace = true }
es-fluent = { features = [ "derive" ], workspace = true }
es-fluent-lang = { workspace = true }
es-fluent-manager-embedded = { workspace = true }
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui-es-fluent = { workspace = true }
gpui-form = { workspace = true }
gpui-storybook = { features = [ "macros" ], workspace = true }
gpui-storybook-core = { workspace = true }
gpui_platform = { workspace = true }
rust_decimal = { workspace = true }
some-lib = { path = "../some-lib" }
strum = { workspace = true }

[build-dependencies]
es-fluent-build = { workspace = true }
