[package]
name = "some-lib"
version = "0.1.0"
edition.workspace = true
license = "Unlicense"
publish = false

[dependencies]
anyhow = { workspace = true }
bon = { workspace = true }
chrono = { workspace = true }
derive_more = { features = [ "full" ], workspace = true }
es-fluent = { features = [ "derive" ], workspace = true }
es-fluent-manager-embedded = { workspace = true }
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui-form = { features = [ "derive", "component" ], workspace = true }
koruma = { features = [ "fluent" ], workspace = true }
koruma-collection = { features = [ "email", "fluent" ], workspace = true }
rust-embed = { workspace = true }
rust_decimal = { workspace = true }
strum = { workspace = true }

[build-dependencies]
es-fluent = { features = [ "build" ], workspace = true }

[features]
default = [ "fluent", "ui", "validation" ]
fluent = [  ]
ui = [  ]
validation = [  ]

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = [ "bon", "gpui", "gpui-component", "rust-embed" ]
