[package]
name = "some-lib"
version = "0.1.0"
edition.workspace = true
license = "Unlicense"
publish = false

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
derive_more = { features = [ "full" ], workspace = true }
es-fluent = { features = [ "derive" ], workspace = true }
es-fluent-manager-embedded = { workspace = true }
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui-form = { features = [ "derive" ], workspace = true }
gpui-form-component = { workspace = true }
koruma = { features = [ "fluent" ], workspace = true }
koruma-collection = { features = [ "email", "fluent" ], workspace = true }
rust_decimal = { workspace = true }
some-lib-custom-components = { path = "../some-lib-custom-components" }
strum = { workspace = true }

[build-dependencies]
es-fluent = { features = [ "build" ], workspace = true }

[features]
default = [ "fluent", "ui", "validation" ]
fluent = [  ]
ui = [  ]
validation = [  ]

[package.metadata.cargo-machete]
ignored = [ "gpui", "gpui-component" ]
